--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nodejs project</title>
+    <title>Nodejs projects with separate controller and router with 5 routes and method.</title>
 </head>
 <body>
     <h1><%= message %></h1>
